fix: kategori kegiatan
