# routes/kategori_kegiatan_routes.go
@@ -14,7 +14,7 @@ func SetupKategoriKegiatanRoutes(api *gin.RouterGroup, kategoriKegiatanControlle
 	kategori_kegiatan := api.Group("/kategori-kegiatan")
 	{
 		// Public routes (butuh auth)
-		kategori_kegiatan.GET("", authMiddleware.RequireLevel(1, 2), kategoriKegiatanController.CreateKategoriKegiatan)
+		kategori_kegiatan.GET("", authMiddleware.RequireLevel(1, 2), kategoriKegiatanController.GetAllKategoriKegiatan)
 		kategori_kegiatan.GET("/:id", authMiddleware.RequireLevel(1, 2), kategoriKegiatanController.GetKategoriKegiatanByID)
 		kategori_kegiatan.GET("/dropdown", authMiddleware.RequireLevel(1, 2), kategoriKegiatanController.GetKategoriKegiatanDropdown)
 		
