# routes/routes.go
@@ -15,6 +15,7 @@ type RouteConfig struct {
 	KeluargaController            *controllers.KeluargaController
 	WargaController               *controllers.WargaController
 	RumahController               *controllers.RumahController
+	KategoriKegiatanController    *controllers.KategoriKegiatanController
 	KegiatanController            *controllers.KegiatanController
 	BroadcastController           *controllers.BroadcastController
 	MutasiKeluargaController      *controllers.MutasiKeluargaController
@@ -75,6 +76,9 @@ func SetupRoutes(router *gin.Engine, config *RouteConfig) {
 
 		// Setup rumah routes
 		SetupRumahRoutes(api, config.RumahController, config.AuthMiddleware)
+
+		// Setup kategori kegiatan routes
+		SetupKategoriKegiatanRoutes(api, config.KategoriKegiatanController, config.AuthMiddleware)
 
 		// Setup kegiatan routes
 		SetupKegiatanRoutes(api, config.KegiatanController, config.AuthMiddleware)
